<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_string">True</string>
    <string name="false_string">False</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="next_question">next question</string>
    <string name="past_question">past question</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="data_empty">Data is empty</string>
    <string name="data_are_not_loaded">Questions are not loaded yet!</string>
</resources>