<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Where is USA?"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/true_string"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_false"/>

    <Button
        android:id="@+id/btn_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/false_string"
        app:layout_constraintTop_toBottomOf="@id/tv_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_true"/>

    <ImageButton
        android:id="@+id/btn_past_question"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/btn_true"
        app:layout_constraintEnd_toEndOf="@id/btn_true"
        app:layout_constraintTop_toBottomOf="@id/btn_true"
        android:contentDescription="@string/past_question"
        android:src="@drawable/baseline_arrow_back_24" />

    <Button
        android:id="@+id/btn_cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        app:layout_constraintStart_toEndOf="@id/btn_past_question"
        app:layout_constraintTop_toTopOf="@id/btn_past_question"
        app:layout_constraintEnd_toStartOf="@id/btn_next_question" />

    <ImageButton
        android:id="@+id/btn_next_question"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/btn_false"
        app:layout_constraintEnd_toEndOf="@id/btn_false"
        app:layout_constraintTop_toBottomOf="@id/btn_false"
        android:contentDescription="@string/next_question"
        android:src="@drawable/baseline_arrow_forward_24" />

</androidx.constraintlayout.widget.ConstraintLayout>